tests/typecheck/fail/record_field_punning_undefined_var.tw
type User = .{ name: String }

fn bad() User {
  .{ name }
}
